Enable GCP ingress controller

--- a/gcp/templates/container/kubernetes-cluster.jinja
+++ b/gcp/templates/container/kubernetes-cluster.jinja
@@ -86,7 +86,7 @@ resources:
         {% endif %}
       addonsConfig:
         httpLoadBalancing:
-          disabled: true
+          disabled: false
         horizontalPodAutoscaling:
           disabled: false
         kubernetesDashboard:
