[WIP] added solution for parameterizing k8s resources with ansible

--- a/3scale_k8s/backend/backend-configmap.yaml.j2
+++ b/3scale_k8s/backend/backend-configmap.yaml.j2
@@ -5,6 +5,6 @@ kind: ConfigMap
 metadata:
 #  creationTimestamp: null
   labels:
-    app: ${APP_LABEL}
+    app: {{ APP_LABEL }}
     threescale_component: backend
   name: backend-environment
