--- a/3scale_k8s/backend/backend-listener-secret.yaml.j2
+++ b/3scale_k8s/backend/backend-listener-secret.yaml.j2
@@ -3,10 +3,10 @@ kind: Secret
 metadata:
 #  creationTimestamp: null
   labels:
-    app: ${APP_LABEL}
+    app: {{ APP_LABEL }}
     threescale_component: backend
   name: backend-listener
 stringData:
-  route_endpoint: https://backend-${TENANT_NAME}.${WILDCARD_DOMAIN}
+  route_endpoint: https://backend-{{ TENANT_NAME }}.{{ WILDCARD_DOMAIN }}
   service_endpoint: http://backend-listener:3000
 type: Opaque
