--- a/3scale_k8s/backend/backend-redis-service.yaml.j2
+++ b/3scale_k8s/backend/backend-redis-service.yaml.j2
@@ -3,7 +3,7 @@ kind: Service
 metadata:
 #  creationTimestamp: null
   labels:
-    app: ${APP_LABEL}
+    app: {{ APP_LABEL }}
     threescale_component: backend
     threescale_component_element: redis
   name: backend-redis
