--- a/3scale_k8s/backend/backend-worker-deployment.yaml.j2
+++ b/3scale_k8s/backend/backend-worker-deployment.yaml.j2
@@ -3,15 +3,15 @@ kind: Deployment
 metadata:
 #  creationTimestamp: null
   labels:
-    app: ${APP_LABEL}
+    app: {{ APP_LABEL }}
     threescale_component: backend
-    threescale_component_element: cron
-  name: backend-cron
+    threescale_component_element: worker
+  name: backend-worker
 spec:
   replicas: 1
   selector:
     matchLabels:
-      deployment: backend-cron
+      deployment: backend-worker
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -24,14 +24,15 @@ spec:
     metadata:
 #      creationTimestamp: null
       labels:
-        app: ${APP_LABEL}
-        deployment: backend-cron
+        app: {{ APP_LABEL }}
+        deployment: backend-worker
         threescale_component: backend
-        threescale_component_element: cron
+        threescale_component_element: worker
     spec:
       containers:
       - args:
-        - backend-cron
+        - bin/3scale_backend_worker
+        - run
         env:
         - name: CONFIG_REDIS_PROXY
           valueFrom:
@@ -68,9 +69,19 @@ spec:
             configMapKeyRef:
               key: RACK_ENV
               name: backend-environment
-        image: amp-backend:latest
+        - name: CONFIG_EVENTS_HOOK
+          valueFrom:
+            secretKeyRef:
+              key: URL
+              name: system-events-hook
+        - name: CONFIG_EVENTS_HOOK_SHARED_SECRET
+          valueFrom:
+            secretKeyRef:
+              key: PASSWORD
+              name: system-events-hook
+        image: {{ AMP_BACKEND_IMAGE }}
         imagePullPolicy: IfNotPresent
-        name: backend-cron
+        name: backend-worker
         resources: {}
       initContainers:
       - command:
@@ -117,7 +128,7 @@ spec:
               name: backend-environment
         - name: SLEEP_SECONDS
           value: "1"
-        image: amp-backend:latest
+        image: {{ AMP_BACKEND_IMAGE }}
         name: backend-redis-svc
         resources: {}
       serviceAccountName: amp
