replaced inline variable with global definitionˆ

--- a/3scale_k8s/backend/backend-secret.yaml.j2
+++ b/3scale_k8s/backend/backend-secret.yaml.j2
@@ -7,6 +7,6 @@ metadata:
     threescale_component: backend
   name: backend-internal-api
 stringData:
-  password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
+  password: {{ SYSTEM_BACKEND_PASSWORD }}
   username: {{ SYSTEM_BACKEND_USERNAME }}
 type: Opaque
