--- a/3scale_k8s/system/system-smtp-config.yaml.j2
+++ b/3scale_k8s/system/system-smtp-config.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    app: $(APP_LABEL)
+    app: {{ APP_LABEL }}
     threescale_component: system
     threescale_component_element: smtp
   name: smtp
