[WIP] fixed deployment errors related to k8s migration

--- a/3scale_k8s/system/system-memcached-deployment.yaml.j2
+++ b/3scale_k8s/system/system-memcached-deployment.yaml.j2
@@ -23,7 +23,7 @@ spec:
     metadata:
       labels:
         app: {{ APP_LABEL }}
-        deploymentConfig: system-memcache
+        deployment: system-memcache
         threescale_component: system
         threescale_component_element: memcache
     spec:
