--- a/3scale_k8s/system/system-mysql-deployment.yaml.j2
+++ b/3scale_k8s/system/system-mysql-deployment.yaml.j2
@@ -17,7 +17,7 @@ spec:
     metadata:
       labels:
         app: {{ APP_LABEL }}
-        deploymentConfig: system-mysql
+        deployment: system-mysql
         threescale_component: system
         threescale_component_element: mysql
     spec:
