--- a/3scale_k8s/zync/zync-service.yaml.j2
+++ b/3scale_k8s/zync/zync-service.yaml.j2
@@ -3,7 +3,7 @@ kind: Service
 metadata:
 #  creationTimestamp: null
   labels:
-    app: ${APP_LABEL}
+    app: {{ APP_LABEL }}
     threescale_component: zync
   name: zync
 spec:
