--- a/3scale_k8s/apicast/apicast-production-deployment.yaml.j2
+++ b/3scale_k8s/apicast/apicast-production-deployment.yaml.j2
@@ -26,7 +26,7 @@ spec:
         prometheus.io/scrape: "true"
       labels:
         app: {{ APP_LABEL }}
-        deploymentConfig: apicast-production
+        deployment: apicast-production
         threescale_component: apicast
         threescale_component_element: production
     spec:
