--- a/3scale_k8s/apicast/apicast-staging-deployment.yaml.j2
+++ b/3scale_k8s/apicast/apicast-staging-deployment.yaml.j2
@@ -26,7 +26,7 @@ spec:
         prometheus.io/scrape: "true"
       labels:
         app: {{ APP_LABEL }}
-        deploymentConfig: apicast-staging
+        deployment: apicast-staging
         threescale_component: apicast
         threescale_component_element: staging
     spec:
