--- a/3scale_k8s/apicast/apicast-staging-service.yaml.j2
+++ b/3scale_k8s/apicast/apicast-staging-service.yaml.j2
@@ -17,4 +17,4 @@ spec:
     protocol: TCP
     targetPort: 8090
   selector:
-    deploymentConfig: apicast-staging
+    deployment: apicast-staging
