--- a/3scale_k8s/rbac/zync-que-role.yaml.j2
+++ b/3scale_k8s/rbac/zync-que-role.yaml.j2
@@ -7,7 +7,8 @@ rules:
 - apiGroups:
   - apps.openshift.io
   resources:
-  - deploymentconfigs
+  - deployments
+# FIXME ^^
   verbs:
   - get
   - list
