--- a/3scale_k8s/system/system-event-hooks-secret.yaml.j2
+++ b/3scale_k8s/system/system-event-hooks-secret.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    app: $(APP_LABEL)
+    app: {{ APP_LABEL }}
     threescale_component: system
   name: system-events-hook
 stringData:
