--- a/3scale_k8s/zync/zync-database-deployment.yaml.j2
+++ b/3scale_k8s/zync/zync-database-deployment.yaml.j2
@@ -19,7 +19,7 @@ spec:
 #      creationTimestamp: null
       labels:
         app: {{ APP_LABEL }}
-        deploymentConfig: zync-database
+        deployment: zync-database
         threescale_component: zync
         threescale_component_element: database
     spec:
