[WIP] moved db root password to k8s secret

--- a/3scale_k8s/system/system-database-secret.yaml.j2
+++ b/3scale_k8s/system/system-database-secret.yaml.j2
@@ -8,5 +8,6 @@ metadata:
 stringData:
   DB_PASSWORD: {{ SYSTEM_DATABASE_PASSWORD }}
   DB_USER: {{ SYSTEM_DATABASE_USER }}
+  ROOT_PASSWORD: {{ SYSTEM_DATABASE_ROOT_PASSWORD }}
   URL: mysql2://root:{{ SYSTEM_DATABASE_ROOT_PASSWORD }}@system-mysql/{{ SYSTEM_DATABASE }}
 type: Opaque
