[WIP] added necessary securityContext values for non-root containers

--- a/3scale_k8s/backend/backend-redis-deployment.yaml.j2
+++ b/3scale_k8s/backend/backend-redis-deployment.yaml.j2
@@ -54,6 +54,10 @@ spec:
           name: backend-redis-storage
         - mountPath: /etc/redis.d/
           name: redis-config
+      securityContext:
+        runAsUser: 1001
+        runAsGroup: 998
+        fsGroup: 998
       serviceAccountName: amp
       volumes:
       - name: backend-redis-storage
