--- a/3scale_k8s/system/system-redis-deployment.yaml.j2
+++ b/3scale_k8s/system/system-redis-deployment.yaml.j2
@@ -53,6 +53,10 @@ spec:
           name: system-redis-storage
         - mountPath: /etc/redis.d/
           name: redis-config
+      securityContext:
+        runAsUser: 1001
+        runAsGroup: 998
+        fsGroup: 998
       serviceAccountName: amp
       volumes:
       - name: system-redis-storage
