reduced 3 system containers + services to 1

--- a/3scale_k8s/shared/apicast-secret.yaml.j2
+++ b/3scale_k8s/shared/apicast-secret.yaml.j2
@@ -7,6 +7,6 @@ metadata:
   name: system-master-apicast
 stringData:
   ACCESS_TOKEN: ${APICAST_ACCESS_TOKEN}
-  BASE_URL: http://${APICAST_ACCESS_TOKEN}@system-master:3000
-  PROXY_CONFIGS_ENDPOINT: http://${APICAST_ACCESS_TOKEN}@system-master:3000/master/api/proxy/configs
+  BASE_URL: http://${APICAST_ACCESS_TOKEN}@system:3000
+  PROXY_CONFIGS_ENDPOINT: http://${APICAST_ACCESS_TOKEN}@system:3000/master/api/proxy/configs
 type: Opaque
