--- a/3scale_k8s/apicast/apicast-production-deployment.yaml.j2
+++ b/3scale_k8s/apicast/apicast-production-deployment.yaml.j2
@@ -93,7 +93,7 @@ spec:
       - command:
         - sh
         - -c
-        - until $(curl --output /dev/null --silent --fail --head http://system-master:3000/status);
+        - until $(curl --output /dev/null --silent --fail --head http://system:3000/status);
           do sleep $SLEEP_SECONDS; done
         env:
         - name: SLEEP_SECONDS
