last minute fixes before demo

--- a/3scale_k8s/shared/apicast-secret.yaml.j2
+++ b/3scale_k8s/shared/apicast-secret.yaml.j2
@@ -6,7 +6,7 @@ metadata:
     threescale_component: system
   name: system-master-apicast
 stringData:
-  ACCESS_TOKEN: ${APICAST_ACCESS_TOKEN}
-  BASE_URL: http://${APICAST_ACCESS_TOKEN}@system:3000
-  PROXY_CONFIGS_ENDPOINT: http://${APICAST_ACCESS_TOKEN}@system:3000/master/api/proxy/configs
+  ACCESS_TOKEN: {{ APICAST_ACCESS_TOKEN }}
+  BASE_URL: https://{{ APICAST_ACCESS_TOKEN }}@{{ MASTER_DOMAIN }}
+  PROXY_CONFIGS_ENDPOINT: https://{{ APICAST_ACCESS_TOKEN }}@{{ MASTER_DOMAIN }}/master/api/proxy/configs
 type: Opaque
