--- a/3scale_k8s/system/system-seed-config.yaml.j2
+++ b/3scale_k8s/system/system-seed-config.yaml.j2
@@ -11,7 +11,7 @@ stringData:
   ADMIN_PASSWORD: {{ ADMIN_PASSWORD }}
   ADMIN_USER: {{ ADMIN_USERNAME }}
   MASTER_ACCESS_TOKEN: {{ MASTER_ACCESS_TOKEN }}
-  MASTER_DOMAIN: {{ MASTER_DOMAIN }}
+  MASTER_DOMAIN: {{ MASTER_SUBDOMAIN }}
   MASTER_PASSWORD: {{ MASTER_PASSWORD }}
   MASTER_USER: {{ MASTER_USER }}
   TENANT_NAME: {{ TENANT_NAME }}
