--- a/3scale_k8s/system/system-sphinx-deployment.yaml.j2
+++ b/3scale_k8s/system/system-sphinx-deployment.yaml.j2
@@ -108,8 +108,7 @@ spec:
       - command:
         - sh
         - -c
-        - until $(curl --output /dev/null --silent --fail --head 'Host: {{ MASTER_DOMAIN }}' --head 'X-Forwarded-Proto: https' --head http://system:3000/status);
-          do sleep $SLEEP_SECONDS; done
+        - "until $(curl --output /dev/null --silent --fail -H 'Host: {{ MASTER_DOMAIN }}' -H 'X-Forwarded-Proto: https' http://system:3000/status);do sleep $SLEEP_SECONDS; done"
         env:
         - name: SLEEP_SECONDS
           value: "1"
