fixed label to match single-pod system deployment

--- a/3scale_k8s/system/system-service.yaml.j2
+++ b/3scale_k8s/system/system-service.yaml.j2
@@ -5,7 +5,7 @@ metadata:
  labels:
    app: {{ APP_LABEL }}
    threescale_component: system
-   threescale_component_element: provider-ui
+   threescale_component_element: app
  name: system
 spec:
  ports:
